Bug 244113 - KNotes keeps re-enabling spell checking in notes when it starts
Summary: KNotes keeps re-enabling spell checking in notes when it starts
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.8.5
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Romanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-10 11:31 UTC by simone
Modified: 2013-10-16 06:19 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simone 2010-07-10 11:31:03 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

First of all:
- I'm using KNotes version 3.9 (it isn't included in the version list).
- I'm using KDE and KNotes coming with Slackware 13.1 (just to make sure this is what you mean by "Slackware Packages" in "Software Distribution Method").

After right-clicking on a note and deselecting the "Auto Spell Check" options, spell check is actually disabled. However, if the application is closed and restarted (both manually in the same KDE session and when KDE is restarted, e.g. after reboot) spell checking is enabled again. This happens for every note I create.

Reproducible: Always

Steps to Reproduce:
Just kill KNotes and re-execute it.

Actual Results:  
No matter whether you had previosly disabled spell checking, it is automatically re-enabled.

Expected Results:  
Spell check should be permanently disabled, I think...
Comment 1 Yakov Markovitch 2011-05-15 17:07:39 UTC
Confirming, same behaviour.
KNotes 3.9
KDE 4.6.3
OpenSuSE 11.4 64-bit
Comment 2 Paolo 2011-11-06 14:24:31 UTC
Configuration: 
O.S.: Ubuntu 10.10 [64-bit] locale system language US. KNotes
Version 3.9 Using KDE Development Platform 4.5.5 (KDE 4.5.5). 

Description: 
If I disable the 'spell checker' in Knotes, it keeps the setting just for current session. At next login 'spell checker' is always ON. No way to make permanent the given setting. I'm thinking to disable 'KDE spell checker' until this problem will be fixed. Thanks, Paolo
Comment 3 Eelko Berkenpies 2012-02-03 15:08:42 UTC
I can confirm this on Fedora 16 running KDE 4.8.0/KNotes 4.8.0.
Comment 4 secondary.address 2012-06-11 11:23:06 UTC
Confirming on:
Kubuntu 12.04 LTS,
KDE 4.8.2/KNotes 4.8.2
Comment 5 Christopher Smith 2012-06-21 02:57:13 UTC
Confirming on KDE/KNotes 4.8.2 on Gentoo.  This bug has been outstanding for two years now; can we please get it confirmed?
Comment 6 I'm anonymous. Delete me. 2012-07-08 00:31:35 UTC
I confimed this bug on KNotes 3.9 on KDE 4.6.5.

Please fix this or I'll ditch KNotes for good.
Comment 7 Andrei ILIE 2012-09-05 00:20:09 UTC
Confirming on KDE / KNotes 4.8.5. I voted for this bug.
There's no (obvious) way to globbaly disable the spell checker. Yet...
Comment 8 Myriam Schweingruber 2012-09-06 21:46:19 UTC
Setting status to confirmed.
Comment 9 Ivan Romanov 2013-10-15 17:39:52 UTC
https://git.reviewboard.kde.org/r/113257/ - a patch to fix this.
Comment 10 Ivan Romanov 2013-10-16 06:10:37 UTC
Git commit e3d2164beb2cd039c0e69e41f795caf040020ae5 by Ivan Romanov.
Committed on 15/10/2013 at 15:17.
Pushed by iromanov into branch 'KDE/4.11'.

Fix Bug 244113 - KNotes keeps re-enabling spell checking in notes when it starts

FIXED-IN: 4.11.3

M  +0    -1    knotes/knoteedit.cpp

http://commits.kde.org/kdepim/e3d2164beb2cd039c0e69e41f795caf040020ae5