Fix Bug 244113 - KNotes keeps re-enabling spell checking in notes when it starts

FIXED-IN: 4.11.3
BUG: 244113