knoteedit.cpp
@@ -52,7 +52,6 @@ KNoteEdit::KNoteEdit( KActionCollection *actions, QWidget *parent )
   } else {
     setAutoFormatting( AutoNone );
   }
-  setCheckSpellingEnabled( true );
 
   // create the actions modifying the text format
   m_textBold  = new KToggleAction( KIcon( QLatin1String("format-text-bold") ), i18n( "Bold" ),
